--- a/blog/views/layout.jade
+++ b/blog/views/layout.jade
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title= title
+    <!--[if lt IE 9]>
+    <script type="text/javascript" src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css")
     link(rel="stylesheet", href="/styles/style.css")
   body
     block content
