--- a/blog/public/styles/style.css
+++ b/blog/public/styles/style.css
@@ -601,6 +601,9 @@ html, body {
   height: 100%;
   min-height: 100%; }
 
+body {
+  padding: 10px; }
+
 .base {
   display: -webkit-box;
   display: -moz-box;
